# GraphicsEngine

./: .gitignore  CMakeLists.txt
BatchFiles/: LinkLibs.bat
Content/Models/SurvivalBackpack/: backpack.mtl
Source/: main.cpp
Source/Engine/Common/: DebugMacros.h  MathsMacros.h  StringOperations.h  Vector.h
Source/Engine/Core/Timing/: GlobalTimer.h
Source/Engine/Core/Timing/Source/: GlobalTimerWindows.cpp
Source/Engine/Input/: InputKeyEnum.h  InputKeyMacros.h  InputManager.h
Source/Engine/Input/Platform/: GLFWKeyMap.h
Source/Engine/Input/Source/: InputManager.cpp
Source/Graphics/: Camera.h  Mesh.h  Renderer.h  Shader.h  Texture.h  Window.h
Source/Graphics/Mesh/: CubeMesh.h  EditableMesh.h  MaterialExamples.h  Mesh.h  Model.h  PlaneMesh.h
Source/Graphics/Mesh/Source/: CubeMesh.cpp  EditableMesh.cpp  Mesh.cpp  Model.cpp  PlaneMesh.cpp
Source/Graphics/Renderer/: Renderer.h
Source/Graphics/Renderer/Source/: Renderer.cpp
Source/Graphics/Shaders/HelloTriangle/: FragmentShader.glsl  VertexShader.glsl
Source/Graphics/Shaders/LightSourceShaders/: FragmentShader.glsl  VertexShader.glsl
Source/Graphics/Shaders/Model/: FragmentShader.glsl  VertexShader.glsl
Source/Graphics/Shaders/Simple/: FragmentShader.glsl  VertexShader.glsl
Source/Graphics/Shaders/Textured/: FragmentShader.glsl  VertexShader.glsl
Source/Graphics/Source/: Camera.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  Window.cpp
Source/Graphics/Window/: Window.h
Source/Graphics/Window/Source/: Window.cpp
cmake/: FindASSIMP.cmake  FindGLFW3.cmake  FindGLM.cmake
